# biski64

./: Cargo.toml  LICENSE  README.md  benchmark.c  benchmark_out.txt  check_injective.z3  check_injective_out.txt  test_bigcrush.c  test_bigcrush_out.txt  test_practrand.c  test_practrand_out.txt
benches/: prng_competitors.rs
c/: biski64-mp.inl  biski64.c  biski64.inl  biski64_demo.c
c_reference/: benchmark.c  benchmark_out.txt  biski64.c  test_practrand_16bit_out.txt  test_practrand_32bit_out.txt  test_practrand_64bit.c  test_practrand_64bit_out.txt  test_practrand_8bit_out.txt  test_practrand_out.txt
java/: Biski64.java  SpeedTest.java
java/jmh/: pom.xml
java/jmh/src/main/java/biski64/: SpeedTest.java
src/: lib.rs  main.rs
tests/: practrand_32bit_out.txt  practrand_64bit_out.txt
z3/: check_injectivity.z3  check_injectivity_out.txt
